--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ idna==3.7
 packaging==24.1
 polib==1.2.0
 psycopg2-binary==2.9.9
+python-dotenv==1.0.1
 requests==2.32.3
 sqlparse==0.5.0
 typing_extensions==4.12.2
